# horchunk

./: .gitignore  README.md  pyproject.toml
docs/: evaluation.ipynb  tuning.ipynb
horchunk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
horchunk/chunkers/: __init__.py  dist.py  win.py
semchunk/: splitters.py
semchunk/chunkers/: __init__.py  base.py  chunk.py  dist.py  utils.py  win.py  window.py
semchunk/filters/: base.py
semchunk/splitters/: __init__.py  base.py  sentence_splitter.py  token_splitter.py
tests/: test_chunkers.py  test_splitters.py
tests/chunkers/: test_win_chunker.py
