[build-system]
requires = ["setuptools == 75.8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "horchunk"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = [
	"langchain == 0.3.14",
	"langchain-openai == 0.3.0",
	"sentence-transformers == 3.3.1",
	"tiktoken == 0.8.0",
	"chromadb == 0.6.2",
	"rich == 13.9.4",
	"pydantic == 2.10.4",
	"numpy == 2.2.1",
	"tqdm == 4.67.1"
]

